# Lumen

./: .gitignore  LICENSE  README.md  dataVisualization.ipynb  dataset_creation.ipynb  rijeka_exp.ipynb
docs/notes/: Note za Lumen takmičenje.md
lumen_dataset/: boris_step_1.csv  boris_step_1.parquet  clustered.csv
src/: README.md  borisDataset.ipynb  dataVisualization.ipynb  scraper.py  training.ipynb
src/datasets/json_queries/: airport zagreb_GB.json  airport zagreb_US.json  croatia beaches_GB.json  croatia beaches_US.json  croatia cuisine_GB.json  croatia cuisine_US.json  croatia luxury resorts_US.json  croatia national parks_GB.json  croatia national parks_US.json  croatia nightlife_GB.json  croatia nightlife_US.json  croatia summer_GB.json  croatia summer_US.json  croatia transport_GB.json  croatia transport_US.json  croatia travel restrictions_GB.json  croatia travel restrictions_US.json  croatia weather forecast_GB.json  dubrovnik stadt_DE.json  familienurlaub kroatien_DE.json  flughafen zagreb_DE.json  hotels in dubrovnik_DE.json  hotels in dubrovnik_GB.json  hotels in dubrovnik_US.json  hotels in split_GB.json  split stadt_DE.json  (+12 more)
src/events/: clustering_events.ipynb  events.ipynb  events.json
src/json/: events.json  queries.json
src/python/: dataVisualization.ipynb  events.ipynb  pyproject.toml  queries.ipynb  queries.py  rijeka_exp.ipynb  scraper.py
src/weather/: new_weather.csv  new_weather_2010-2011.csv  weather_2010-2011.csv  weather_creation.ipynb
src/websearching/: dtw.ipynb  multiTimeline.csv
weather/: weather.csv  weather_creation.ipynb
