[tool.poetry]
name = "lumen"
version = "0.1.0"
description = ""
authors = ["Nenad <radovic.nenad158@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytrends = "^4.9.2"
matplotlib = "^3.8.3"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
